Fix String and removed namespace

--- a/src/src/Client/Resources/Pages/Account/Reset.it.resx
+++ b/src/src/Client/Resources/Pages/Account/Reset.it.resx
@@ -127,6 +127,6 @@
     <value>Token non trovato!</value>
   </data>
   <data name="Set new password" xml:space="preserve">
-    <value>Imposta nuova password</value>
+    <value>Imposta nuova Password</value>
   </data>
 </root>
