--- a/src/src/Client/Resources/Pages/Content/Dashboard.it.resx
+++ b/src/src/Client/Resources/Pages/Content/Dashboard.it.resx
@@ -139,12 +139,12 @@
     <value>Ruoli registrati</value>
   </data>
   <data name="Documents" xml:space="preserve">
-    <value>Documents</value>
+    <value>Documenti</value>
   </data>
   <data name="Document Types" xml:space="preserve">
-    <value>Document Types</value>
+    <value>Tipi di Documenti</value>
   </data>
   <data name="Document Extended Attributes" xml:space="preserve">
-    <value>Document Extended Attributes</value>
+    <value>Attributi Estesi Documenti</value>
   </data>
 </root>
