--- a/src/src/Client/Resources/Shared/NavMenu.it.resx
+++ b/src/src/Client/Resources/Shared/NavMenu.it.resx
@@ -142,13 +142,13 @@
     <value>Dashboard</value>
   </data>
   <data name="Document Management" xml:space="preserve">
-    <value>Document Management</value>
+    <value>Gestione Documenti</value>
   </data>
   <data name="Document Store" xml:space="preserve">
-    <value>Archivio documenti</value>
+    <value>Archivio Documenti</value>
   </data>
   <data name="Document Types" xml:space="preserve">
-    <value>Document Types</value>
+    <value>Tipi di Documenti</value>
   </data>
   <data name="FAQs" xml:space="preserve">
     <value>FAQs</value>
