--- a/src/src/Client/Resources/Pages/Catalog/AddEditProductModal.it.resx
+++ b/src/src/Client/Resources/Pages/Catalog/AddEditProductModal.it.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Add Product" xml:space="preserve">
-    <value>Aggiungi prodotto</value>
+    <value>Aggiungi Prodotto</value>
   </data>
   <data name="Barcode" xml:space="preserve">
     <value>Barcode</value>
@@ -163,6 +163,6 @@
     <value>Carica</value>
   </data>
   <data name="View" xml:space="preserve">
-    <value>View</value>
+    <value>Visualizza</value>
   </data>
 </root>
