--- a/src/src/Infrastructure/Resources/Services/Identity/AccountService.it.resx
+++ b/src/src/Infrastructure/Resources/Services/Identity/AccountService.it.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Email {0} is already used." xml:space="preserve">
-    <value>Email {0} is already used.</value>
+    <value>Email {0} già utilizzata</value>
   </data>
   <data name="Incorrect password." xml:space="preserve">
-    <value>Incorrect password.</value>
+    <value>Password non valida.</value>
   </data>
   <data name="Phone number {0} is already used." xml:space="preserve">
-    <value>Phone number {0} is already used.</value>
+    <value>Numero di telefono {0} già usato.</value>
   </data>
   <data name="User Not Found." xml:space="preserve">
-    <value>Utente Non Trovato.</value>
+    <value>Utente non trovato.</value>
   </data>
 </root>
