--- a/src/src/Client/Resources/Pages/Authentication/Login.it.resx
+++ b/src/src/Client/Resources/Pages/Authentication/Login.it.resx
@@ -120,6 +120,9 @@
   <data name="Description" xml:space="preserve">
     <value>Accedi con le tue credenziali.</value>
   </data>
+  <data name="Don't have an account?" xml:space="preserve">
+    <value>Non hai un account?</value>
+  </data>
   <data name="E-mail" xml:space="preserve">
     <value>E-Mail</value>
   </data>
@@ -140,6 +143,9 @@
   </data>
   <data name="Password is required!" xml:space="preserve">
     <value>È richiesta una password!</value>
+  </data>
+  <data name="Register here" xml:space="preserve">
+    <value>Registrati qui</value>
   </data>
   <data name="Remember me?" xml:space="preserve">
     <value>Ricordati di me?</value>
