--- a/src/src/Client/Resources/Pages/Content/Home.it.resx
+++ b/src/src/Client/Resources/Pages/Content/Home.it.resx
@@ -157,7 +157,7 @@
     <value>Link Importanti</value>
   </data>
   <data name="Increase you are stuck anywhere or have any queries regarding this implementation, I have compiled a Quick Start Guide for you reference." xml:space="preserve">
-    <value>Se sei bloccato o hai domande al riguardo? Leggi la guida rapida come riferimento.</value>
+    <value>Sei bloccato o hai domande? Leggi la guida rapida come riferimento.</value>
   </data>
   <data name="Learning Resources" xml:space="preserve">
     <value>Risorse dove Imparare</value>
