--- a/src/src/Server/Resources/Localization/ServerCommonResources.nl.resx
+++ b/src/src/Server/Resources/Localization/ServerCommonResources.nl.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BlazorHero Jobs" xml:space="preserve">
-    <value>Задания BlazorHero</value>
+  <data name="An unhandled error has occurred." xml:space="preserve">
+    <value>Er is een niet-verwerkte fout opgetreden.</value>
+  </data>
+  <data name="Authorization" xml:space="preserve">
+    <value>Machtiging</value>
+  </data>
+  <data name="Input your Bearer token in this format - Bearer {your token here} to access this API" xml:space="preserve">
+    <value>Voer uw Bearer token in deze indeling in - Bearer {your token here} om toegang te krijgen tot deze API</value>
+  </data>
+  <data name="The Token is expired." xml:space="preserve">
+    <value>Het token is verlopen.</value>
+  </data>
+  <data name="You are not authorized to access this resource." xml:space="preserve">
+    <value>U hebt geen toegang tot deze bron.</value>
+  </data>
+  <data name="You are not Authorized." xml:space="preserve">
+    <value>U bent niet gemachtigd.</value>
   </data>
 </root>
