--- a/src/src/Server/Resources/Localization/ServerCommonResources.km.resx
+++ b/src/src/Server/Resources/Localization/ServerCommonResources.km.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BlazorHero Jobs" xml:space="preserve">
-    <value>Задания BlazorHero</value>
+  <data name="An unhandled error has occurred." xml:space="preserve">
+    <value>បញ្ហាប្រព័ន្ធមិនអាចកំណត់បាន</value>
+  </data>
+  <data name="Authorization" xml:space="preserve">
+    <value>ការអនុញ្ញាត</value>
+  </data>
+  <data name="Input your Bearer token in this format - Bearer {your token here} to access this API" xml:space="preserve">
+    <value>បញ្ចូលនិមិត្តសញ្ញាអ្នកកាន់របស់អ្នកក្នុងទម្រង់នេះ - អ្នកកាន់ {កូដធូឃីនទីនេះ} ដើម្បីចូលប្រើ API នេះ</value>
+  </data>
+  <data name="The Token is expired." xml:space="preserve">
+    <value>ថូខឹនផុតកំណត់។</value>
+  </data>
+  <data name="You are not authorized to access this resource." xml:space="preserve">
+    <value>អ្នកមិនត្រូវបានអនុញ្ញាតឱ្យចូលប្រើធនធាននេះទេ។</value>
+  </data>
+  <data name="You are not Authorized." xml:space="preserve">
+    <value>អ្នកមិនត្រូវបានអនុញ្ញាតទេ។</value>
   </data>
 </root>
