--- a/src/src/Server/Resources/Managers/Preferences/ServerPreferenceManager.it.resx
+++ b/src/src/Server/Resources/Managers/Preferences/ServerPreferenceManager.it.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Failed to get server preferences" xml:space="preserve">
-    <value>Errore durante il recupero delle preferenze</value>
+    <value>Impossibile ottenere le preferenze del server</value>
   </data>
   <data name="Server Language has been changed" xml:space="preserve">
-    <value>Linguaggio del Server è stato aggiornato</value>
+    <value>La lingua del server è stata cambiata</value>
   </data>
 </root>
