--- a/src/src/Server/Resources/Managers/Preferences/ServerPreferenceManager.km.resx
+++ b/src/src/Server/Resources/Managers/Preferences/ServerPreferenceManager.km.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BlazorHero Jobs" xml:space="preserve">
-    <value>Задания BlazorHero</value>
+  <data name="Failed to get server preferences" xml:space="preserve">
+    <value>បានបរាជ័យក្នុងការទទួលបានចំណូលចិត្តម៉ាស៊ីនមេ</value>
+  </data>
+  <data name="Server Language has been changed" xml:space="preserve">
+    <value>ភាសារបស់ម៉ាស៊ីនមេត្រូវបានផ្លាស់ប្តូរ</value>
   </data>
 </root>
