--- a/src/src/Server/Resources/Managers/Startup.es.resx
+++ b/src/src/Server/Resources/Managers/Startup.es.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BlazorHero Jobs" xml:space="preserve">
-    <value>Задания BlazorHero</value>
+    <value>Trabajos de BlazorHero</value>
   </data>
 </root>
